Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-12900

spider tests failed in buildbot with valgrind

    XMLWordPrintable

Details

    Description

      http://buildbot.askmonty.org/buildbot/builders/work-amd64-valgrind/builds/10052/steps/test/logs/stdio

      spider.spider_fixes_part                 w2 [ fail ]  Found warnings/errors in server log file!
              Test ended at 2017-05-14 13:23:23
      line
      ==15440== Thread 25:
      ==15440== Invalid read of size 8
      ==15440==    at 0x5E0BC6: thd_increment_bytes_sent (sql_class.cc:4054)
      ==15440==    by 0x55B5E6: net_real_write (net_serv.cc:710)
      ==15440==    by 0x55AAE3: net_flush (net_serv.cc:363)
      ==15440==    by 0x55AEFE: net_write_command (net_serv.cc:501)
      ==15440==    by 0x82A82E: cli_advanced_command (client.c:701)
      ==15440==    by 0x831950: mysql_close_slow_part (client.c:3949)
      ==15440==    by 0x8319C5: mysql_close (client.c:3961)
      ==15440==    by 0x1375115F: spider_db_mysql::disconnect() (spd_db_mysql.cc:1644)
      ==15440==    by 0x136A798D: spider_db_disconnect(st_spider_conn*) (spd_db_conn.cc:275)
      ==15440==    by 0x136C96AE: spider_free_conn_alloc(st_spider_conn*) (spd_conn.cc:156)
      ==15440==    by 0x136CB6D0: spider_free_conn(st_spider_conn*) (spd_conn.cc:1112)
      ==15440==    by 0x136C9B7E: spider_free_conn_from_trx(st_spider_transaction*, st_spider_conn*, bool, bool, int*) (spd_conn.cc:268)
      ==15440==  Address 0x13b6e6e0 is 4,352 bytes inside a block of size 21,912 free'd
      ==15440==    at 0x4C291ED: free (vg_replace_malloc.c:530)
      ==15440==    by 0xF18DB2: my_free (my_malloc.c:217)
      ==15440==    by 0x558D63: ilink::operator delete(void*, unsigned long) (sql_list.h:638)
      ==15440==    by 0x5DA2D2: THD::~THD() (sql_class.cc:1707)
      ==15440==    by 0x136D131F: spider_bg_sts_action(void*) (spd_conn.cc:2893)
      ==15440==    by 0x4E3C0DA: start_thread (in /lib64/libpthread-2.18.so)
      ==15440==    by 0x6B28E3C: clone (in /lib64/libc-2.18.so)
      ==15440==  Block was alloc'd at
      ==15440==    at 0x4C280F3: malloc (vg_replace_malloc.c:299)
      ==15440==    by 0xF188C6: my_malloc (my_malloc.c:101)
      ==15440==    by 0x136A631A: ilink::operator new(unsigned long) (sql_list.h:634)
      ==15440==    by 0x136D0B5C: spider_bg_sts_action(void*) (spd_conn.cc:2773)
      ==15440==    by 0x4E3C0DA: start_thread (in /lib64/libpthread-2.18.so)
      ==15440==    by 0x6B28E3C: clone (in /lib64/libc-2.18.so)
      ==15440== Invalid write of size 8
      ==15440==    at 0x5E0BD8: thd_increment_bytes_sent (sql_class.cc:4054)
      ==15440==    by 0x55B5E6: net_real_write (net_serv.cc:710)
      ==15440==    by 0x55AAE3: net_flush (net_serv.cc:363)
      ==15440==    by 0x55AEFE: net_write_command (net_serv.cc:501)
      ==15440==    by 0x82A82E: cli_advanced_command (client.c:701)
      ==15440==    by 0x831950: mysql_close_slow_part (client.c:3949)
      ==15440==    by 0x8319C5: mysql_close (client.c:3961)
      ==15440==    by 0x1375115F: spider_db_mysql::disconnect() (spd_db_mysql.cc:1644)
      ==15440==    by 0x136A798D: spider_db_disconnect(st_spider_conn*) (spd_db_conn.cc:275)
      ==15440==    by 0x136C96AE: spider_free_conn_alloc(st_spider_conn*) (spd_conn.cc:156)
      ==15440==    by 0x136CB6D0: spider_free_conn(st_spider_conn*) (spd_conn.cc:1112)
      ==15440==    by 0x136C9B7E: spider_free_conn_from_trx(st_spider_transaction*, st_spider_conn*, bool, bool, int*) (spd_conn.cc:268)
      ==15440==  Address 0x13b6e6e0 is 4,352 bytes inside a block of size 21,912 free'd
      ==15440==    at 0x4C291ED: free (vg_replace_malloc.c:530)
      ==15440==    by 0xF18DB2: my_free (my_malloc.c:217)
      ==15440==    by 0x558D63: ilink::operator delete(void*, unsigned long) (sql_list.h:638)
      ==15440==    by 0x5DA2D2: THD::~THD() (sql_class.cc:1707)
      ==15440==    by 0x136D131F: spider_bg_sts_action(void*) (spd_conn.cc:2893)
      ==15440==    by 0x4E3C0DA: start_thread (in /lib64/libpthread-2.18.so)
      ==15440==    by 0x6B28E3C: clone (in /lib64/libc-2.18.so)
      ==15440==  Block was alloc'd at
      ==15440==    at 0x4C280F3: malloc (vg_replace_malloc.c:299)
      ==15440==    by 0xF188C6: my_malloc (my_malloc.c:101)
      ==15440==    by 0x136A631A: ilink::operator new(unsigned long) (sql_list.h:634)
      ==15440==    by 0x136D0B5C: spider_bg_sts_action(void*) (spd_conn.cc:2773)
      ==15440==    by 0x4E3C0DA: start_thread (in /lib64/libpthread-2.18.so)
      ==15440==    by 0x6B28E3C: clone (in /lib64/libc-2.18.so)
      

      spider.spider_fixes, spider.spider_fixes_part, spider/bg.function, spider/bg.spider_fixes, spider/bg.basic_sql

      Attachments

        Issue Links

          Activity

            People

              jacob-mathew Jacob Mathew (Inactive)
              elenst Elena Stepanova
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - 0d
                  0d
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 4d 7h
                  4d 7h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.